k8s/suma-office/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: suma-office
  labels:
    name: suma-office
